[package]
name = "biscuiting-lib"
version = "0.4.0"
authors = ["Mike Moran <mike@houseofmoran.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version="0.3", features = ['console', 'Window', 'Performance'] }
url = "2.1"
base64 = "0.10"
imageproc = "0.18"
image = "0.21"

[profile.release]
lto = true
opt-level = 's'
