[package]
name = "biscuiting-lib"
version = "0.10.1"
authors = ["Mike Moran <mike@houseofmoran.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.2"
web-sys = { version="0.3", features = ['console', 'Window', 'Performance'] }
js-sys = "0.3"
url = "2.1"
base64 = "0.10"
imageproc = "0.19"
image = "0.22"
rand = "0.7"
console_error_panic_hook = "0.1"
wee_alloc = { version="0.4", optional=true}

[features]
# default = ["wee_alloc"]

[profile.release]
lto = true
opt-level = 3
debug = true
