[package]
name = "opencv-rust"
version = "0.1.0"
authors = ["Mike Moran <mike@houseofmoran.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.19.1", default-features = false, features = ["opencv-41"]}
rand = "0.7.0"